--- a/src/main/resources/public/pages/booking.html
+++ b/src/main/resources/public/pages/booking.html
@@ -103,75 +103,185 @@
     }
   </style>
   <style>
-    .btn-46,
-.btn-46 *,
-.btn-46 :after,
-.btn-46 :before,
-.btn-46:after,
-.btn-46:before {
-  border: 0 solid;
-  box-sizing: border-box;
-}
-.btn-46 {
-  -webkit-tap-highlight-color: transparent;
-  -webkit-appearance: button;
-  background-color: #000;
-  background-image: none;
-  color: #fff;
-  cursor: pointer;
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
-    Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif,
-    Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
-  font-size: 100%;
-  line-height: 1.5;
-  margin: 0;
-  -webkit-mask-image: -webkit-radial-gradient(#000, #fff);
-  padding: 0;
-}
-.btn-46:disabled {
-  cursor: default;
-}
-.btn-46:-moz-focusring {
-  outline: auto;
-}
-.btn-46 svg {
-  display: block;
-  vertical-align: middle;
-}
-.btn-46 [hidden] {
-  display: none;
-}
-.btn-46 {
-  background: #fff;
-  box-sizing: border-box;
-  color: #000;
-  display: block;
-  font-weight: 900;
-  -webkit-mask-image: none;
-  padding: 1.2rem 3rem;
-  perspective: 800px;
-  position: relative;
-  text-transform: uppercase;
-  transform: rotateX(8deg);
-  transform-style: preserve-3d;
-  transition: transform 0.2s;
-}
-.btn-46:before {
-  background: #eee;
-  content: "";
-  display: block;
-  height: 20%;
-  left: 0;
-  position: absolute;
-  top: 100%;
-  transform: rotateX(-90deg);
-  transform-origin: 0 0;
-  width: 100%;
-}
-.btn-46:hover {
-  transform: rotateX(25deg);
-}
+    .btn-29,
+    .btn-29 *,
+    .btn-29 :after,
+    .btn-29 :before,
+    .btn-29:after,
+    .btn-29:before {
+      border: 0 solid;
+      box-sizing: border-box;
+    }
 
+    .btn-29 {
+      -webkit-tap-highlight-color: transparent;
+      background-color: #000;
+      background-image: none;
+      color: #fff;
+      cursor: pointer;
+      font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
+        Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif,
+        Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+      font-size: 100%;
+      font-weight: 900;
+      line-height: 1.5;
+      margin: 0;
+      padding: 0;
+      text-transform: uppercase;
+    }
+
+    .btn-29:disabled {
+      cursor: default;
+    }
+
+    .btn-29:-moz-focusring {
+      outline: auto;
+    }
+
+    .btn-29 svg {
+      display: block;
+      vertical-align: middle;
+    }
+
+    .btn-29 [hidden] {
+      display: none;
+    }
+
+    .btn-29 {
+      --tilt: 30px;
+      border-width: 1px;
+      display: grid;
+      padding: 1.2rem 3rem;
+      place-content: center;
+    }
+
+    .btn-29,
+    .btn-29 .text-container {
+      overflow: hidden;
+      position: relative;
+    }
+
+    .btn-29 .text-container {
+      display: block;
+      width: -webkit-fit-content;
+      width: -moz-fit-content;
+      width: fit-content;
+    }
+
+    .btn-29 .text {
+      display: block;
+      font-weight: 900;
+      mix-blend-mode: difference;
+      position: relative;
+    }
+
+    .btn-29:hover .text {
+      -webkit-animation: move-right-alternate 0.3s ease forwards;
+      animation: move-right-alternate 0.3s ease forwards;
+    }
+
+    @-webkit-keyframes move-right-alternate {
+      0% {
+        transform: translateX(0);
+      }
+
+      50% {
+        transform: translateX(80%);
+      }
+
+      51% {
+        transform: translateX(-80%);
+      }
+
+      to {
+        transform: translateX(0);
+      }
+    }
+
+    @keyframes move-right-alternate {
+      0% {
+        transform: translateX(0);
+      }
+
+      50% {
+        transform: translateX(80%);
+      }
+
+      51% {
+        transform: translateX(-80%);
+      }
+
+      to {
+        transform: translateX(0);
+      }
+    }
+
+    .btn-29:before {
+      -webkit-animation: move-out 0.3s ease;
+      animation: move-out 0.3s ease;
+      background: #fff;
+      -webkit-clip-path: polygon(0 0,
+          calc(100% - var(--tilt)) 0,
+          100% 50%,
+          calc(100% - var(--tilt)) 100%,
+          0 100%);
+      clip-path: polygon(0 0,
+          calc(100% - var(--tilt)) 0,
+          100% 50%,
+          calc(100% - var(--tilt)) 100%,
+          0 100%);
+      content: "";
+      height: 100%;
+      left: calc(-100% - var(--tilt));
+      position: absolute;
+      top: 0;
+      width: calc(100% + var(--tilt));
+    }
+
+    .btn-29:hover:before {
+      -webkit-animation: move-in 0.3s ease forwards;
+      animation: move-in 0.3s ease forwards;
+    }
+
+    @-webkit-keyframes move-in {
+      0% {
+        transform: translateX(0);
+      }
+
+      to {
+        transform: translateX(100%);
+      }
+    }
+
+    @keyframes move-in {
+      0% {
+        transform: translateX(0);
+      }
+
+      to {
+        transform: translateX(100%);
+      }
+    }
+
+    @-webkit-keyframes move-out {
+      0% {
+        transform: translateX(100%);
+      }
+
+      to {
+        transform: translateX(200%);
+      }
+    }
+
+    @keyframes move-out {
+      0% {
+        transform: translateX(100%);
+      }
+
+      to {
+        transform: translateX(200%);
+      }
+    }
   </style>
 
 </head>
@@ -272,12 +382,11 @@
 
           </select>
           <select id="person" style="width:150px;height:40px;margin: 0% 5px;">
-            <option>入住人數</option>
-            <option value="2">2（成人數）</option>
-            <option value="3">3（成人數）</option>
-            <option value="4">4（成人數）</option>
+            <option>入住房型</option>
+            <option value="2">雙人房</option>
+            <option value="4">四人房</option>
           </select>
-          <button id="abc" name="search_room" class="btn-46"
+          <button id="abc" name="search_room" class="btn-29"
             style="width: 150px;height:40px; background-color: #f3bf07; margin: 0% 5px;">查詢空房</button>
         </form>
         <p align="center" style="color: aliceblue;">13歲以上同成人收費</ㄋ>
@@ -641,8 +750,8 @@
                                         </div>
                                       </td>
                                       <td width="174" align="center">
-                                        <input type="submit" name="DataList1$ctl01$btn_order" value="一般訂房"
-                                          id="DataList1_ctl01_btn_order" class="btn">
+                                        <input type="button" name="DataList1$ctl01$btn_order" value="一般訂房"
+                                          id="DataList1_ctl01_btn_order" class="btn" onclick="showalert()">
                                       </td>
                                     </tr>
                                     <tr>
@@ -707,7 +816,6 @@
           }
         })
       });
-
       //     success: function (room_msg) {
       //       // room_msg.forEach(function (item, index) {
       //       //   // console.log(user_room.value);
@@ -719,11 +827,24 @@
       //     }
       //   })
       // })
+
+function giveBack() {
+  type:'POST',
+
+}
+
+
+      // function showalert() {
+        // alert("謝謝您訂購iRelax的房間！請問您確定要訂購此房型嗎？");        
+      // }
+      // function bookSuccess() {
+      //   alert("")
+      // }
+
     </script>
     <!-- 天氣＋會員登入 -->
     <script src="../layout/scripts/Weather.js"></script>
     <script src="../layout/scripts/CheckLogin.js"></script>
-
 </body>
 
 </html>
